# packit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  encode.rs
src/: archive.rs  decode.rs  encode.rs  file.rs  header.rs  lib.rs  main.rs
