[package]
name = "packit"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "packit"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.3.5", features = ["derive"], optional = true }
memmap2 = { version = "0.7.0", optional = true }
zerocopy = { version = "0.7.32", features = ["derive"] }

[features]
default = []
alloc = []
std = ["alloc"]
cli = ["std", "dep:clap", "dep:memmap2"]
